--- a/dash/static/css/style.css
+++ b/dash/static/css/style.css
@@ -53,6 +53,10 @@
   font-weight: 500;
 }
 
+.header .top-nav .top-nav-items button span {
+  font-size: 18px;
+}
+
 .header .top-nav .top-nav-items .dropdown .dropdown-toggle::after {
   display: none;
 }
@@ -124,7 +128,7 @@
 }
 
 .header .navbar .navbar-nav .nav-link {
-  padding: 14px 20px;
+  padding: 12px 18px;
   font-size: 16px;
   font-weight: 500;
   color: var(--dark-alt);
@@ -240,7 +244,7 @@
 }
 
 .db-content .card h2 {
-  font-size: 35px;
+  font-size: 30px;
   margin-bottom: 5px;
   color: var(--dark);
 }
