--- a/dash/static/css/variables.css
+++ b/dash/static/css/variables.css
@@ -1,9 +1,10 @@
 /* @import url("https://fonts.googleapis.com/css2?family=El+Messiri:wght@400;500;600;700&family=Sarabun:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"); */
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Duployan:wght@400;700&family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Duployan:wght@400;700&family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 :root {
   /* Font Family */
-  --sans-serif: "Outfit", sans-serif;
-  --sans-serif-alt: "Noto Sans Duployan", sans-serif;
+  --sans-serif: "Poppins", sans-serif;
 
   /* Colors */
   --primary: #4169e1;
